testdata/zkc/invalid/if_invalid_02.zkc
;;error:4:12-13:braces required
function f(u8 x) -> (u8 r) {
  r = 0
  if x + x * x == 0 {
    r = 1
    return
  }
  return
}
